tests/ui/09-test-main.stderr
error: missing parameter: 'test_cases'
 --> $DIR/07-test-main.rs:6:5
  |
6 | /     rye::test_main! {
7 | |         runner = crate::dummy;
8 | |     }
  | |     ^ in this macro invocation
  | |_____|
  | 

error: missing parameter: 'runner'
  --> $DIR/07-test-main.rs:12:5
   |
12 | /     rye::test_main! {
13 | |         test_cases = {};
14 | |     }
   | |     ^ in this macro invocation
   | |_____|
   | 

error: glob pattern is forbidden
  --> $DIR/07-test-main.rs:23:13
   |
23 |             *,
   |             ^

error: rename pattern is forbidden
  --> $DIR/07-test-main.rs:24:13
   |
24 |             foo as bar,
   |             ^^^^^^^^^^

error: unknown parameter: 'foo'
  --> $DIR/07-test-main.rs:32:9
   |
32 |         foo = bar;
   |         ^^^

error[E0425]: cannot find function `the_quick_brown_fox_jumps_over_the_lazy_dog` in this scope
  --> $DIR/07-test-main.rs:39:18
   |
39 |         runner = the_quick_brown_fox_jumps_over_the_lazy_dog;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
